# TerraFormGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/instructions/: instructions.instructions.md
include/: App.h  Camera.h  CameraWindow.h  IClickable.h  IRenderable.h  IUiManager.h  IUiWindow.h  Light.h  LightWindow.h  Mesh.h  MeshData.h  MeshRenderer.h  Object.h  ObjectClickDetection.h  ResourceManager.h  ResourceManger.h  Shader.h  SpriteRenderer.h  TerrainGenerator.h  TerrainRenderer.h  TerrainStrategy.h  TerrainWindow.h  UiManager.h  test.h
include/App/: App.h
include/Core/: Camera.h  CameraWindow.h  IRenderable.h  IUiWindow.h
include/Cuda/: test.cuh
include/Graphics/: Light.h  LightWindow.h  Mesh.h  MeshData.h  Shader.h  SpriteRenderer.h  Texture.h
include/Terrain/: TerrainGenerator.h  TerrainHeightFunctions.h  TerrainRenderer.h  TerrainStrategy.h  TerrainWindow.h
include/Utils/: ObjectClickDetection.h  ResourceManager.h
resources/shaders/: compute.glsl  light.frag  mesh.frag  mesh.vert  terrain.frag  terrain.vert  unlitShader.frag  unlitShader.vert
src/: App.cpp  Camera.cpp  CameraWindow.cpp  Light.cpp  LightWindow.cpp  Mesh.cpp  MeshRenderer.cpp  ObjectClickDetection.cpp  Program.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  TerrainGenerator.cpp  TerrainRenderer.cpp  TerrainWindow.cpp  Texture.cpp  UiManager.cpp
src/App/: App.cpp
src/Core/: Camera.cpp  CameraWindow.cpp
src/Cuda/: test.cu
src/Graphics/: Light.cpp  LightWindow.cpp  Mesh.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp
src/Terrain/: TerrainGenerator.cpp  TerrainRenderer.cpp  TerrainWindow.cpp
src/Utils/: ObjectClickDetection.cpp  ResourceManager.cpp
